--- a/1 Start Here/Video Tutorials for GeoGebra Applets.html
+++ b/1 Start Here/Video Tutorials for GeoGebra Applets.html
@@ -132,6 +132,22 @@
                                 </textarea>        
                         </div>
 
+                        <div class="iframe-copy" style="background-color: #DFF6DD; color: #034732; font-size: 16px; padding: 10px; border-radius: 5px; font-family: 'Roboto', Arial, sans-serif; margin: 5px 0px;">
+                        <p class="p-iframe-copy">The following video is a tutorial for using the Boxplot Generator GeoGebra Application</p>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/AkWhhInikOs?si=q1bsoDbRxORh5sBZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        
+                        <p class="p-iframe-copy">
+                        The button below contains an iframe embed code for this YouTube video tutorial of the GeoGebra Boxplot Generator tool, ready to be copied and used in MyOpenMath or an LMS.
+                        </p>
+                        <button onclick="copyCodeToClipboard('BoxplotGeneratorGeoGebraAppVideo')"
+                        style="background-color: #034078; color: white; border: none; padding: 8px 15px; font-size: 14px; border-radius: 5px; cursor: pointer;">
+                        Copy YouTube Video Embed Code
+                        </button>
+                        <textarea id="BoxplotGeneratorGeoGebraAppVideo" style="position: absolute; left: -9999px;">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/AkWhhInikOs?si=q1bsoDbRxORh5sBZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        </textarea>
+                        </div>
+
                     </section>
 
                     <div class="d-flex justify-content-between mt-4 no-print-nav">
