--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
                         </div>
 
                         <section>
-
                             <h2>Unit One Content</h2>
                             <h3>Chapter 1: Introduction to Statistical Thinking</h3>
                             <ul>
@@ -147,33 +146,47 @@
                                 <li><a href="2 Unit One Content/Understanding Standard Deviation.html">Understanding Standard Deviation</a></li>
                                 <li><a href="2 Unit One Content/Finding Outliers for Normal Distributions.html">Finding Outliers for Normal Distributions</a></li>
                                 <li><a href="2 Unit One Content/Empirical Rule.html">Empirical Rule</a></li>
-                                <li><a href="2 Unit One Content/Measures of Variation.html">Measures of Variation</a></li>
-                                <li><a href="2 Unit One Content/Measures of Location.html">Measures of Location</a></li>
-                                <li><a href="2 Unit One Content/Chapter 3 Lecture Notes.html">Chapter 3 Lecture Notes
-                                    Complete</a></li>
+                                <li><a href="2 Unit One Content/Chebyshev Inequality.html">Chebyshev Inequality</a></li>
+                                <li><a href="2 Unit One Content/Calculating a Percentile.html">Calculating a Percentile</a></li>
+                                <li><a href="2 Unit One Content/Calculating a zScore.html">Calculating a \(Z\)-Score</a></li>
+                                <li><a href="2 Unit One Content/Calculating the Five Number Summary.html">Calculating the Five-Number Summary</a></li>
+                                <li><a href="2 Unit One Content/Finding Outliers for Skewed Distributions.html">Finding Outliers for Skewed Distributions</a></li>
+                                <li><a href="2 Unit One Content/Creating a Boxplot.html">Creating a Boxplot</a></li>
+                                <li><a href="2 Unit One Content/Chapter 3 Lecture Notes.html">Chapter 3 Lecture Notes Complete</a></li>
                             </ul>
                         </section>
 
                         <section>
                             <h2>Unit Two Content</h2>
+                            <h3>Chapter 4: Probability Theory and Understanding Probabilities</h3>
                             <ul>
-                                <li><a href="3 Unit Two Content/Addition Rule for Probability.html">Addition Rule for
-                                        Probability</a></li>
-                                <li><a href="3 Unit Two Content/Binomial Probability Distributions.html">Binomial
-                                        Probability Distributions</a></li>
-                                <li><a href="3 Unit Two Content/Conditional Probability and At Least One.html">Conditional
-                                        Probability and At Least One</a></li>
-                                <li><a href="3 Unit Two Content/Introduction to Probability Distributions.html">Introduction
-                                        to Probability Distributions</a></li>
-                                <li><a href="3 Unit Two Content/Introduction to Probability Theory.html">Introduction to
-                                        Probability Theory</a></li>
-                                <li><a href="3 Unit Two Content/Multiplication Rule for Probability.html">Multiplication
-                                        Rule for Probability</a></li>
-                                <li><a href="3 Unit Two Content/Normal Probability Distributions.html">Normal
-                                        Probability Distributions</a></li>
-                                <li><a href="3 Unit Two Content/Uniform Probability Distributions.html">Uniform
-                                        Probability Distributions</a></li>
+                                <li><a href="3 Unit Two Content/Sample Spaces and Events.html">Sample Spaces and Events</a></li>
+                                <li><a href="3 Unit Two Content/Probability Area and Equally Likely Outcomes.html">Probability Area and Equally Likely Outcomes</a></li>
+                                <li><a href="3 Unit Two Content/Theoretical and Subjective Probabilities.html">Theoretical and Subjective Probabilities</a></li>
+                                <li><a href="3 Unit Two Content/Properties of Probability.html">Properties of Probability</a></li>
+                                <li><a href="3 Unit Two Content/Addition Rule for Probability.html">Addition Rule for Probability</a></li>
+                                <li><a href="3 Unit Two Content/Conditional Probability.html">Conditional Probability</a></li>
+                                <!-- <li><a href="3 Unit Two Content/.html"></a></li>
+                                <li><a href="3 Unit Two Content/.html"></a></li> -->
                             </ul>
+                            <!-- <h3>Chapter 5: Discrete Probability Distributions</h3>
+                            <ul>
+                                <li><a href="3 Unit Two Content/.html"></a></li>
+                                <li><a href="3 Unit Two Content/.html"></a></li>
+                                <li><a href="3 Unit Two Content/.html"></a></li>
+                                <li><a href="3 Unit Two Content/.html"></a></li>
+                                <li><a href="3 Unit Two Content/.html"></a></li>
+                                <li><a href="3 Unit Two Content/.html"></a></li>
+                            </ul>
+                            <h3>Chapter 6: Continuous Probability Distributions</h3>
+                            <ul>
+                                <li><a href="3 Unit Two Content/.html"></a></li>
+                                <li><a href="3 Unit Two Content/.html"></a></li>
+                                <li><a href="3 Unit Two Content/.html"></a></li>
+                                <li><a href="3 Unit Two Content/.html"></a></li>
+                                <li><a href="3 Unit Two Content/.html"></a></li>
+                                <li><a href="3 Unit Two Content/.html"></a></li>
+                            </ul> -->
                         </section>
 
                         <section>
