some edits to chapter lecture notes

--- a/3 Unit Two Content/Introduction to Probability.html
+++ b/3 Unit Two Content/Introduction to Probability.html
@@ -280,7 +280,7 @@
                                 Selecting a Yellow Pea</h2>
                             <p>A genetics experiment involves a sample of pea plants. The sample consists of 18 yellow
                                 peas and 57 green peas. If one pea is randomly selected from this sample, what is the
-                                probability that it is yellow?</p>
+                                probability that it is yellow? It is typically expected that \(\dfrac{1}{4}\) of peas are yellow. Does the results you obtained contradict this expectation?</p>
 
                             <div class="solution">
                                 <h2 class="solution-header">Solution</h2>
