--- a/1 Start Here/Common MyOpenMath Codes.html
+++ b/1 Start Here/Common MyOpenMath Codes.html
@@ -678,7 +678,7 @@ $preCSV = "&lt;pre id=\"dataID\" style=\"display:none;\"&gt;$labelArray\n";
                             <p
                                 style="font-family: Arial, sans-serif; font-size: 14px; color: #034078; text-align: center; margin-bottom: 10px;">
                                 Contains a responsive iframe element for embedding the <a
-                                    href="https://www.geogebra.org/m/epr8jb4h" target="_blank"
+                                    href="https://www.geogebra.org/m/npksdkc4" target="_blank"
                                     rel="noopener noreferrer"
                                     style="font-weight: bold; color: #034078; text-decoration: underline;">Linear
                                     Regression GeoGebra tool</a>
@@ -690,16 +690,13 @@ $preCSV = "&lt;pre id=\"dataID\" style=\"display:none;\"&gt;$labelArray\n";
                             </button>
                             <textarea id="linearRegressionGeoGebraTool" style="position: absolute; left: -9999px;">
                                 <p>Below is the GeoGebra Linear Regression Tool. If this app is too small to view, you can open the
-                                    <a href="https://www.geogebra.org/m/epr8jb4h" target="_blank" rel="noopener noreferrer">
+                                    <a href="https://www.geogebra.org/m/npksdkc4" target="_blank" rel="noopener noreferrer">
                                         application here in a new window
                                     </a>.
                                 </p>
                                 <div style="background-color: #A9D6E5; border: 3px solid #034078; padding: 10px; border-radius: 5px; display: flex; justify-content: center;">
                                     <div style="position: relative; width: 100%; max-width: 800px; padding-top: 70.6%;">
-                                        <iframe scrolling="no" title="Linear Regression Tool"
-                                            src="https://www.geogebra.org/material/iframe/id/epr8jb4h/width/968/height/683/border/888888/sfsb/true/smb/true/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false"
-                                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;">
-                                        </iframe>
+                                        <iframe scrolling="no" title="Linear Regression Tool" src="https://www.geogebra.org/material/iframe/id/npksdkc4/width/967/height/759/border/888888/sfsb/true/smb/true/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false" width="967px" height="759px" style="border:0px;"> </iframe>
                                     </div>
                                 </div>
                             </textarea>
