updating links to regression tool

--- a/1 Start Here/Common MyOpenMath Codes.html
+++ b/1 Start Here/Common MyOpenMath Codes.html
@@ -678,7 +678,7 @@ $preCSV = "&lt;pre id=\"dataID\" style=\"display:none;\"&gt;$labelArray\n";
                             <p
                                 style="font-family: Arial, sans-serif; font-size: 14px; color: #034078; text-align: center; margin-bottom: 10px;">
                                 Contains a responsive iframe element for embedding the <a
-                                    href="https://www.geogebra.org/m/npksdkc4" target="_blank"
+                                    href="https://www.geogebra.org/material/iframe/id/npksdkc4/width/967/height/759/border/888888/sfsb/true/smb/true/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false" target="_blank"
                                     rel="noopener noreferrer"
                                     style="font-weight: bold; color: #034078; text-decoration: underline;">Linear
                                     Regression GeoGebra tool</a>
@@ -690,7 +690,7 @@ $preCSV = "&lt;pre id=\"dataID\" style=\"display:none;\"&gt;$labelArray\n";
                             </button>
                             <textarea id="linearRegressionGeoGebraTool" style="position: absolute; left: -9999px;">
                                 <p>Below is the GeoGebra Linear Regression Tool. If this app is too small to view, you can open the
-                                    <a href="https://www.geogebra.org/m/npksdkc4" target="_blank" rel="noopener noreferrer">
+                                    <a href="https://www.geogebra.org/material/iframe/id/npksdkc4/width/967/height/759/border/888888/sfsb/true/smb/true/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false" target="_blank" rel="noopener noreferrer">
                                         application here in a new window
                                     </a>.
                                 </p>
