Making MOM reference sheet available via the main index.html

--- a/1 Start Here/Instructor Only Module/MOM Reference Sheet.html
+++ b/1 Start Here/Instructor Only Module/MOM Reference Sheet.html
@@ -325,6 +325,6 @@
       </div>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=AM_CHTML"></script>
-    <script src="../js/ASCIIMathML.js"></script>
+    <script src="../../js/ASCIIMathML.js"></script>
   </body>
 </html>
